# -GuardianCI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_PROGRESS.md  README.md  SECURITY.md  SETUP.md  implementation_plan.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_provider.yml
.github/workflows/: guardian-ci.yml  guardianci-false-positive.yml  guardianci.yml  lint.yml  test.yml
.gitlab/: guardianci.gitlab-ci.yml
requirements/: base.txt  dev.txt
scripts/: guardianci_ai_review.py  guardianci_false_positive.py  guardianci_metrics.py
tests/: conftest.py  test_guardianci.py
